--- a/agents-list.html
+++ b/agents-list.html
@@ -29,9 +29,7 @@
     <meta property="og:description" content="Portal DOM.ba! Idealno mjesto za unos, pregled i prodaju vaših nekretnina.">
     <meta property="og:image" content="http://dom.ba/img/fb-logo.jpg" />
 
-    <!--build:css css/main.min.css -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/main.min.css">
 
 </head>
 <body>
@@ -183,160 +181,6 @@
         section variables: less/my-variables.less
         variables prefix: @account-menu-
         section style: less/account-menu.less
--->
-<section id="wsfy-menu" class="animated slideOutUp top">
-    <div class="container">
-        <div class="wrapper">
-
-            <!--IF USER FALSE - login/register -->
-            <div class="account-menu-title">
-                <h2>
-                    Mi tražimo za Vas
-                </h2>
-                <p>
-                    Možete se prijaviti na Vaš postojeći dom.ba nalog sa Vašim korisničkim imenom/lozinkom ili uz pomoć Vašeg facebook naloga
-                </p>
-                <p>
-                    Novi ste ovdje? Onda <u>besplatno</u> možete napraviti Vaš dom.ba nalog uz pomoć Vaše email adrese ili facebook naloga.
-                </p>
-            </div>
-
-            <div class="account-menu-login-wrapper">
-                <button class="collapsed" type="button" data-toggle="collapse" data-target="#account-menu-login" aria-expanded="false" aria-controls="collapseExample">
-                    Prijavite se
-                    <span class="fa fa-sign-in"></span>
-                </button>
-                <h3>Prijavite se</h3>
-                <div class="account-menu-login collapse" id="account-menu-login">
-                    <form>
-                        <div class="form-group">
-                            <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
-                            <input type="email" class="form-control" id="login-email" placeholder="E-mail adresa">
-                        </div>
-                        <div class="form-group">
-                            <label class="sr-only" for="login-password">Vaša lozinka</label>
-                            <input type="password" class="form-control" id="login-password" placeholder="Lozinka">
-                        </div>
-                        <!--<div class="checkbox">-->
-                            <!--<label>-->
-                                <!--<input type="checkbox"> Zapamtite me-->
-                            <!--</label>-->
-                        <!--</div>-->
-
-                        <div class="form-group form-submit">
-                            <a class="btn" href="#">Zaboravili ste Vašu lozinku?</a>
-                            <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
-                        </div>
-                    </form>
-                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
-                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                        Prijavite se pomoću Facebook-a
-                    </button>
-                </div>
-
-            </div>
-
-            <div class="account-menu-register-wrapper">
-                <h3>
-                    Napravite novi nalog
-                </h3>
-                <button class="btn btn-invert btn-lg btn-block collapsed" type="button" data-toggle="collapse" data-target="#account-menu-register" aria-expanded="false" aria-controls="collapseExample">
-                    Pretraga nekretnina
-                    <span class="fa fa-user-plus"></span>
-                </button>
-                <div class="account-menu-register collapse" id="account-menu-register">
-                    <form>
-                        <div class="form-group">
-                            <label class="sr-only" for="register-username">Vaše korisničko ime</label>
-                            <input type="text" class="form-control" id="register-username" placeholder="Korisničko ime">
-                        </div>
-                        <!--<div class="form-group user-type">-->
-                            <!--<label class="control-label sr-only" for="user-type">Vrsta naloga</label>-->
-                            <!--<select id="user-type" class="form-control">-->
-                                <!--<option>Izaberite vrstu Naloga</option>-->
-                                <!--<option>Javni korisnik</option>-->
-                                <!--<option>Agent</option>-->
-                                <!--<option>Notar</option>-->
-                                <!--<option>Banka</option>-->
-                            <!--</select>-->
-                        <!--</div>-->
-                        <div class="form-group">
-                            <label class="sr-only" for="register-email">Vaša e-mail adresa</label>
-                            <input type="email" class="form-control" id="register-email" placeholder="E-mail adresa">
-                        </div>
-                        <div class="form-group">
-                            <label class="sr-only" for="register-password">Vaša lozinka</label>
-                            <input type="password" class="form-control" id="register-password" placeholder="Lozinka">
-                        </div>
-                        <div class="form-group">
-                            <label class="sr-only" for="register-password-check">Potvrda lozinke</label>
-                            <input type="password" class="form-control" id="register-password-check" placeholder="Potvrda lozinke">
-                        </div>
-
-                        <div class="form-group form-submit">
-                            <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
-                        </div>
-                    </form>
-                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
-                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                        Registruj se pomoću Facebook-a
-                    </button>
-                </div>
-
-            </div>
-
-            <!--IF USER TRUE - login/register -->
-            <div class="account-menu-title">
-                <h2>
-                    Pregled Vašeg naloga - podešavanja
-                </h2>
-                <p>
-                    Ovdje imate uvid u Vaše oglase, podešavanja Vašeg profila, takođe možete se odjaviti sa trenutnog naloga.
-                </p>
-            </div>
-            <div class="account-menu-links">
-                <div class="wrapper">
-                    <div class="account-menu-link animated">
-                        <!-- Link to list of user's ads -->
-                        <a class="btn btn-invert btn-block" href="#">
-                            Moji oglasi
-                            <i class="fa fa-home" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="account-menu-link animated">
-                        <!-- Link to "add new ad" -->
-                        <a class="btn btn-invert btn-block" href="#">
-                            Objavi novi oglas
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="account-menu-link animated">
-                        <!-- Link to user settings -->
-                        <a class="btn btn-invert btn-block" href="#">
-                            Podešavanja naloga
-                            <i class="fa fa-wrench" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="account-menu-link animated">
-                        <!-- log out button -->
-                        <a class="btn btn-invert btn-block" href="#">
-                            Odjavite se
-                            <i class="fa fa-sign-out" aria-hidden="true"></i>
-                        </a>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-</section>
-
-<!--    "We search for you" menu (form)
-        section variables: less/my-variables.less
-        variables prefix: @wsfy-
-        section style: less/wfys.less
 -->
 <section id="account-menu" class="animated slideOutUp top">
     <div class="container">
@@ -506,10 +350,10 @@
         </div>
 
         <div class="logo-block">
-                <a href="index.html">
-                    <?xml version="1.0" encoding="UTF-8"?>
-                    <!--<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">-->
-                    <svg class="logo animated fadeOutUp" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"viewBox="0 0 3474 1219"
+            <a href="index.html">
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!--<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">-->
+                <svg class="logo animated fadeOutUp" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"viewBox="0 0 3474 1219"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
                  <defs>
                   <style type="text/css">
@@ -542,7 +386,7 @@
                   <path class="fil2" d="M936 87c-1,2 -3,4 -5,6l-207 303 104 0c16,0 38,-13 50,-29l137 -202 -79 -78z"/>
                  </g>
                 </svg>
-                </a>
+            </a>
         </div>
 
         <div class="right-side">
@@ -561,7 +405,7 @@
                 <span class="closed text animated fadeInDown">Prijavi se</span>
             </button>
 
-            <button id="wsfy-menu-toggle" type="button" class="header-btn" aria-expanded="false">
+            <button id="sad-menu-toggle" type="button" class="header-btn" aria-expanded="false">
                 <span class="sr-only">Toggle login/register</span>
                 <span class="icon-bar icon-bar-1"></span>
                 <span class="icon-bar icon-bar-2"></span>
@@ -1039,10 +883,10 @@
 
             <!-- TODO: grid controls -->
             <!--<div class="new-controls">-->
-                <!--<div class="btn-group">-->
-                <!--<a href="#" data-controls="grid" class="btn btn-primary btn-lg active"><span class="fa fa-th-large"></span></a>-->
-                <!--<a href="#" data-controls="list" class="btn btn-primary btn-lg"><span class="fa fa-th-list"></span></a>-->
-                <!--</div>-->
+            <!--<div class="btn-group">-->
+            <!--<a href="#" data-controls="grid" class="btn btn-primary btn-lg active"><span class="fa fa-th-large"></span></a>-->
+            <!--<a href="#" data-controls="list" class="btn btn-primary btn-lg"><span class="fa fa-th-list"></span></a>-->
+            <!--</div>-->
             <!--</div>-->
 
             <div class="new-list">
@@ -1279,12 +1123,12 @@
                     <div>
 
                     </div>
-                <div class="footer-short-text-holder">
-                    <p>
-                        DOM.ba je regionalni Internet portal za oglašavanje nekretnina na području Bosne i Hercegovine. Osnovan je 2015.
-                        godine s vizijom da olakša povezivanje prodavaca i najmodavaca, te kupaca i najmoprimaca nekretnina u regionu.
-                    </p>
-                </div>
+                    <div class="footer-short-text-holder">
+                        <p>
+                            DOM.ba je regionalni Internet portal za oglašavanje nekretnina na području Bosne i Hercegovine. Osnovan je 2015.
+                            godine s vizijom da olakša povezivanje prodavaca i najmodavaca, te kupaca i najmoprimaca nekretnina u regionu.
+                        </p>
+                    </div>
 
             </section>
             <section class="footer-general-links">
@@ -1300,7 +1144,7 @@
                 <ul>
                     <li>
                         <a class="phone-link" href="tel:000">6523465
-                        <span>- Savo</span>
+                            <span>- Savo</span>
                         </a>
                     </li>
                     <li>
@@ -1544,14 +1388,7 @@
     </div>
 </div>
 
-<!--build:js js/main.min.js -->
-<script src="components/jquery/dist/jquery.min.js"></script>
-<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="components/slick-carousel/slick/slick.min.js"></script>
-<script src="components/ion.rangeSlider/js/ion.rangeSlider.min.js"></script>
-
-<script src="js/main.js"></script>
-<!-- endbuild -->
+<script src="js/main.min.js"></script>
 
 </body>
 </html>
