--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="main-menu-links-section animated">
                 <ul>
                     <li><a href="#">O nama</a></li>
-                    <li><a href="#">Agenti</a></li>
+                    <li><a href="agents-list.html">Agenti</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Uslovi korištenja</a></li>
                 </ul>
@@ -182,14 +182,14 @@
         variables prefix: @account-menu-
         section style: less/account-menu.less
 -->
-<section id="account-menu" class="animated slideOutUp top">
+<section id="wsfy-menu" class="animated slideOutUp top">
     <div class="container">
         <div class="wrapper">
 
             <!--IF USER FALSE - login/register -->
             <div class="account-menu-title">
                 <h2>
-                    Prijavite se ili napravite novi nalog
+                    Mi tražimo za Vas
                 </h2>
                 <p>
                     Možete se prijaviti na Vaš postojeći dom.ba nalog sa Vašim korisničkim imenom/lozinkom ili uz pomoć Vašeg facebook naloga
@@ -257,6 +257,160 @@
                                 <!--<option>Notar</option>-->
                                 <!--<option>Banka</option>-->
                             <!--</select>-->
+                        <!--</div>-->
+                        <div class="form-group">
+                            <label class="sr-only" for="register-email">Vaša e-mail adresa</label>
+                            <input type="email" class="form-control" id="register-email" placeholder="E-mail adresa">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="register-password">Vaša lozinka</label>
+                            <input type="password" class="form-control" id="register-password" placeholder="Lozinka">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="register-password-check">Potvrda lozinke</label>
+                            <input type="password" class="form-control" id="register-password-check" placeholder="Potvrda lozinke">
+                        </div>
+
+                        <div class="form-group form-submit">
+                            <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
+                        </div>
+                    </form>
+                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        Registruj se pomoću Facebook-a
+                    </button>
+                </div>
+
+            </div>
+
+            <!--IF USER TRUE - login/register -->
+            <div class="account-menu-title">
+                <h2>
+                    Pregled Vašeg naloga - podešavanja
+                </h2>
+                <p>
+                    Ovdje imate uvid u Vaše oglase, podešavanja Vašeg profila, takođe možete se odjaviti sa trenutnog naloga.
+                </p>
+            </div>
+            <div class="account-menu-links">
+                <div class="wrapper">
+                    <div class="account-menu-link animated">
+                        <!-- Link to list of user's ads -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Moji oglasi
+                            <i class="fa fa-home" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- Link to "add new ad" -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Objavi novi oglas
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- Link to user settings -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Podešavanja naloga
+                            <i class="fa fa-wrench" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- log out button -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Odjavite se
+                            <i class="fa fa-sign-out" aria-hidden="true"></i>
+                        </a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!--    "We search for you" menu (form)
+        section variables: less/my-variables.less
+        variables prefix: @wsfy-
+        section style: less/wfys.less
+-->
+<section id="account-menu" class="animated slideOutUp top">
+    <div class="container">
+        <div class="wrapper">
+
+            <!--IF USER FALSE - login/register -->
+            <div class="account-menu-title">
+                <h2>
+                    Prijavite se ili napravite novi nalog
+                </h2>
+                <p>
+                    Možete se prijaviti na Vaš postojeći dom.ba nalog sa Vašim korisničkim imenom/lozinkom ili uz pomoć Vašeg facebook naloga
+                </p>
+                <p>
+                    Novi ste ovdje? Onda <u>besplatno</u> možete napraviti Vaš dom.ba nalog uz pomoć Vaše email adrese ili facebook naloga.
+                </p>
+            </div>
+
+            <div class="account-menu-login-wrapper">
+                <button class="collapsed" type="button" data-toggle="collapse" data-target="#account-menu-login" aria-expanded="false" aria-controls="collapseExample">
+                    Prijavite se
+                    <span class="fa fa-sign-in"></span>
+                </button>
+                <h3>Prijavite se</h3>
+                <div class="account-menu-login collapse" id="account-menu-login">
+                    <form>
+                        <div class="form-group">
+                            <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
+                            <input type="email" class="form-control" id="login-email" placeholder="E-mail adresa">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="login-password">Vaša lozinka</label>
+                            <input type="password" class="form-control" id="login-password" placeholder="Lozinka">
+                        </div>
+                        <!--<div class="checkbox">-->
+                        <!--<label>-->
+                        <!--<input type="checkbox"> Zapamtite me-->
+                        <!--</label>-->
+                        <!--</div>-->
+
+                        <div class="form-group form-submit">
+                            <a class="btn" href="#">Zaboravili ste Vašu lozinku?</a>
+                            <button type="submit" class="btn btn-login btn-invert">Prijavi se</button>
+                        </div>
+                    </form>
+                    <button class="btn btn-block btn-fb" onclick="loginWithFacebook()">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        Prijavite se pomoću Facebook-a
+                    </button>
+                </div>
+
+            </div>
+
+            <div class="account-menu-register-wrapper">
+                <h3>
+                    Napravite novi nalog
+                </h3>
+                <button class="btn btn-invert btn-lg btn-block collapsed" type="button" data-toggle="collapse" data-target="#account-menu-register" aria-expanded="false" aria-controls="collapseExample">
+                    Pretraga nekretnina
+                    <span class="fa fa-user-plus"></span>
+                </button>
+                <div class="account-menu-register collapse" id="account-menu-register">
+                    <form>
+                        <div class="form-group">
+                            <label class="sr-only" for="register-username">Vaše korisničko ime</label>
+                            <input type="text" class="form-control" id="register-username" placeholder="Korisničko ime">
+                        </div>
+                        <!--<div class="form-group user-type">-->
+                        <!--<label class="control-label sr-only" for="user-type">Vrsta naloga</label>-->
+                        <!--<select id="user-type" class="form-control">-->
+                        <!--<option>Izaberite vrstu Naloga</option>-->
+                        <!--<option>Javni korisnik</option>-->
+                        <!--<option>Agent</option>-->
+                        <!--<option>Notar</option>-->
+                        <!--<option>Banka</option>-->
+                        <!--</select>-->
                         <!--</div>-->
                         <div class="form-group">
                             <label class="sr-only" for="register-email">Vaša e-mail adresa</label>
@@ -405,7 +559,7 @@
                 <span class="closed text animated fadeInDown">Prijavi se</span>
             </button>
 
-            <button id="sad-menu-toggle" type="button" class="header-btn" aria-expanded="false">
+            <button id="wsfy-menu-toggle" type="button" class="header-btn" aria-expanded="false">
                 <span class="sr-only">Toggle login/register</span>
                 <span class="icon-bar icon-bar-1"></span>
                 <span class="icon-bar icon-bar-2"></span>
