domba - public user profile started

--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <a href="index-no-user.html" class="text-center">početna kad korisnik nije prijavljen</a>
+            <a href="index-no-user.html" class="btn btn-primary btn-block">početna kad korisnik nije prijavljen</a>
+            <a href="public-user.html" class="btn btn-primary btn-block">profil javnog korisnika</a>
         </div>
     </div>
 </div>
